# videodrome-plugin

./: .env.example  .gitignore  .mcpbignore  IMPLEMENTATION_PLAN.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  REBRAND_SUMMARY.md  SESSION_NOTES_2026-02-17.md  build_bundle.py  configure.py  install-to-desktop.sh  manifest.json  pyproject.toml  setup-install.sh  test_server_manual.py  update-claude-config.sh
decisions/: adr-021-transmission-integration.md  adr-022-deployment-modes.md
docs/adr/: 0001-custom-mcp-server.md  0002-guessit-plus-tmdb-identification.md  0003-three-tier-safety-model.md  0004-confidence-scoring-strategy.md  0005-tdd-implementation.md  0006-claude-code-plugin-structure.md  0007-mcpb-desktop-extension.md
docs/design/: architecture.md
server/: client.py  main.py  matcher.py  safety.py  torrent_search.py  transmission.py  watcher.py
server/migrations/: __init__.py  migrate_to_videodrome.py
server/tools/: discovery.py  ingest.py  library.py  nas.py  torrent_search.py  transmission.py
tests/: test_matcher.py  test_tools_discovery.py  test_tools_library.py  test_tools_nas.py  test_torrent_search.py  test_transmission.py  test_watcher.py
videodrome-plugin/: .mcp.json  SKILL.md  plugin.json
videodrome-plugin/agents/: ingest.md  library.md  media.md  watcher.md
videodrome-plugin/commands/: configure.md  identify.md  ingest.md  plan.md  rename.md  review.md  scan.md  status.md  watch.md
videodrome-plugin/hooks/: safety.py
