[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plex-claude-plugin"
version = "0.1.0"
description = "Claude MCP plugin for Plex Media Server administration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Nick Perrott" },
]
dependencies = [
    "mcp>=1.2.0",
    "plexapi>=4.18.0",
    "guessit>=3.8.0",
    "tmdbsimple>=2.9.0",
    "aiosqlite>=0.20.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "aioresponses>=0.7",
]

[project.scripts]
plex-mcp = "server.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
