[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[project]
name = "videodrome-plugin"
version = "0.1.0"
description = "Claude MCP plugin for video management with Plex, TMDb, and Transmission integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Nick Perrott" },
]
dependencies = [
    "mcp>=1.2.0",
    "plexapi>=4.18.0",
    "guessit>=3.8.0",
    "tmdbsimple>=2.9.0",
    "aiosqlite>=0.20.0",
    "watchdog>=4.0.0",
    "transmission-rpc>=7.0.0",
    "torrent-search-mcp>=1.1.0",  # Torrent search across multiple providers
    "crawl4ai>=0.8.0",            # Required by torrent-search-mcp (>=0.8.0 for CVE fix)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "aioresponses>=0.7",
]

[project.scripts]
videodrome = "server.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
